# bromley-bin-reminder

./: .env.template  .pre-commit-config.yaml  Dockerfile  README.md  config.yml.template  docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.py  test.html
.github/: reviewers.yml
.github/workflows/: auto_request_review.yml
app/: collection.py  main.py  notification.py  notify.py  notify_utils.py  reload.py  scraper.py  waste_utils.py
app/common/: email.html  logging.py  settings.py
common/: settings.py  utils.py
