[tool.poetry]
name = "bromley-bin-reminder"
version = "0.1.0"
description = ""
authors = ["Matt Holubinka <meholubinka@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.14.2"
requests = "^2.32.5"
selenium = "^4.36.0"
lxml = {extras = ["html-clean"], version = "^6.0.2"}
schedule = "^1.2.2"
pytz = "^2025.2"
webdriver-manager = "^4.0.2"
watchdog = "^6.0.0"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
isort = "^7.0.0"
black = "^25.9.0"
mypy = "^1.18.2"
ruff = "^0.14.0"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
