[tool.poetry]
name = "bromley-bin-reminder"
version = "0.1.0"
description = ""
authors = ["Matt Holubinka <meholubinka@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.14.3"
requests = "^2.32.5"
selenium = "^4.41.0"
lxml = {extras = ["html-clean"], version = "^6.0.2"}
schedule = "^1.2.2"
pytz = "^2026.1"
webdriver-manager = "^4.0.2"
watchdog = "^6.0.0"
pyyaml = "^6.0.3"


[tool.poetry.group.dev.dependencies]
isort = "^8.0.1"
black = "^26.3.0"
mypy = "^1.19.1"
ruff = "^0.15.5"
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
